--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -89,22 +89,16 @@
 
 #amenities-grid {
     grid-template-columns: 1fr 1fr;
+    margin: 0px 30px;
 }
-
-#amenities-list {
-    grid-column: 1/2;
-    margin: 0px 20px;
-    
-}
-
 
 #specialized-grid {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr .5fr;
+    display: grid;
 }
 
-#specialized-list {
-    grid-column: 1/4;
+#specializedImg-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 #specializedBtns {
@@ -113,29 +107,38 @@
     margin: 10px 60px;
 }
 
+
 /*************************************************/
 /***************** CONTACT PAGE ******************/
 
 #contact-grid {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: .5fr .5fr;
-    gap: 15Px;
+   
+    gap: 15px;
+}
+
+#contact-info {
+    grid-column: 1/3;
 }
 
 #hotel-img {
-   grid-column: 1/2;
-   margin: 0px 0px 0px 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column: 1/3;
+    margin: 0px 20px;
 } 
 
 #contact-div1 {
     grid-column: 2/3;
-    margin: 0px 20px 0px 0px;
+   
 }
 
 #contact-div2 {
     grid-column: 1/3;
     margin: 0px 160px 20px 160px;
 }
+
+
 
 
 /*************************************************/
@@ -151,11 +154,33 @@
 
 #weddingPkg {
     padding: 0px 15px;
-    margin: 40px;
+    margin: 30px 80px;
 }
 
 #receptionContactBtn {
     margin: 0px 300px 30px 300px;
+}
+
+
+/*************************************************/
+/*************** MISSIONARY PAGE *****************/
+
+#bedroom-info {
+    grid-row: 1/4;
+    grid-column: 2/3;
+    background-color: #ffffff;
+    border: 2px solid #b7c8d8;
+    border-radius: 5px 5px 5px 5px;
+    padding: 15px;
+}
+
+.suite-info ul {
+    margin: 0px 0px 20px 20px;
+}
+
+#missionaryDiv-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 
