--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -1,16 +1,22 @@
 @media only screen and (min-width: 760px) {
 
-/************** Header ************/
+/**********************************************/
+/******************* Header *******************/
 
-/************** Navigation ************/
 
-/********************** Body *************/
+/**********************************************/
+/****************** Navigation ****************/
+
+
+/**********************************************/
+/********************** Body ******************/
 
 .page-intro p {
     margin: 25px;
 }
 
-/************** Footer ************/
+/**********************************************/
+/******************* Footer ******************/
 
 .foot1 {
     display: grid;
@@ -47,7 +53,7 @@
     margin: 0px 200px 10px 200px;
 }
 
-/**********************************************/
+/*************************************************/
 /********************** TEMPLES PAGE *************/
 
 #temple-grid {
@@ -59,10 +65,6 @@
 
 #json-divs {
     margin: 35px 150px;
-}
-
-#back-button {
-    margin: 150px;
 }
 
 
