--- a/templeinn/css/large.css
+++ b/templeinn/css/large.css
@@ -93,6 +93,10 @@
     margin: 35px 200px;
 }
 
+#back-button {
+    margin: 25px 25px 25px 200px;
+}
+
 
 /*************************************************/
 /**************** RESERVATION PAGE ***************/
