--- a/templeinn/css/small.css
+++ b/templeinn/css/small.css
@@ -244,7 +244,7 @@ footer .lastline {
 
 .t-cards {
     border: 2px solid #b7c8d8;
-    padding: 10px;
+    padding: 10px 10px 30px 10px;
     background-color: #ffffff;
     border-radius: 5px 5px 5px 5px;
 }
