--- a/templeinn/css/large.css
+++ b/templeinn/css/large.css
@@ -63,6 +63,10 @@
     grid-column: 2/4;
 }
 
+#guestForm {
+    margin: 20px 280px;
+}
+
 
 /**********************************************/
 /******************* TEMPLES PAGE *************/
@@ -145,10 +149,6 @@
 #contact-div1 {
     margin: 0px 20px 0px 0px;
     padding: 20px 20px 20px 30px;
-}
-
-#contact-div2 {
-    margin: 0px 260px 20px 260px;
 }
 
 #contact-div1 p {
