--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -53,6 +53,10 @@
     margin: 0px 200px 10px 200px;
 }
 
+#guestForm {
+    margin: 20px 100px;
+}
+
 /*************************************************/
 /********************** TEMPLES PAGE *************/
 
@@ -131,7 +135,6 @@
 #hotel-img {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column: 1/3;
     margin: 0px 20px;
 } 
 
@@ -139,12 +142,6 @@
     grid-column: 2/3;
    
 }
-
-#contact-div2 {
-    grid-column: 1/3;
-    margin: 0px 160px 20px 160px;
-}
-
 
 
 
