--- a/templeinn/css/small.css
+++ b/templeinn/css/small.css
@@ -227,6 +227,12 @@ footer .lastline {
     color: #ffffff;
 }
 
+#todayWeather p {
+    font-size: 18px;
+    text-align: center;
+    padding: 10px;
+}
+
 #guestForm {
     border: 2px solid #b7c8d8;
     background-color: #ffffff;
