--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -53,6 +53,12 @@
     margin: 0px 200px 10px 200px;
 }
 
+#todayWeather p {
+    font-size: 22px;
+    text-align: center;
+    padding: 20px;
+}
+
 #guestForm {
     margin: 20px 100px;
 }
